# LiveSwitch

./: .env.example  .gitignore  README.md  pyproject.toml
config/: medical_triage.json
src/: __init__.py  main.py
src/agents/: __init__.py  tools.py
src/config/: __init__.py  loader.py  schemas.py  validator.py
src/context/: __init__.py  compaction.py  history.py  memory.py  session.py  token_tracker.py
src/orchestration/: __init__.py  factory.py  handoff.py  manager.py
src/persistence/: __init__.py  database.py  repository.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_compaction.py  test_config.py  test_conversation_flows.py  test_error_scenarios.py  test_factory.py  test_integration.py  test_persistence.py  test_tools.py
tests/manual/: TEST_SCENARIOS.md
